# computer-graphics

./: CMakeLists.txt  README.md
Labs/rasteriser/: Makefile  gmon.out
Labs/rasteriser/Source/: skeleton.cpp
Labs/raytracer/: Makefile  gmon.out  run.sh
Labs/raytracer/Source/: TestModelH.h  skeleton.cpp
Labs/starfield/Source/: SDLauxiliary.h  skeleton.cpp
