cmake_minimum_required(VERSION 3.13)
project(computer_graphics)

set(CMAKE_CXX_STANDARD 14)

include_directories(Labs/glm/glm)
include_directories(Labs/glm/glm/detail)
include_directories(Labs/glm/glm/gtc)
include_directories(Labs/glm/glm/gtx)
include_directories(Labs/glm/test/external/gli)
include_directories(Labs/glm/test/external/gli/core)
include_directories(Labs/glm/test/external/gli/gtx)
include_directories(Labs/raytracer/Source)
include_directories(Labs/starfield/Source)

add_executable(computer_graphics
        docs/bin/bishop.jpg
        docs/bin/rasteriser.png
        docs/bin/raytracer.png
        docs/bin/stars.png
        docs/css/bootstrap.css
        docs/css/bootstrap.min.css
        docs/css/bootstrap.min.js
        docs/css/jquery.min.js
        docs/css/main.css
        docs/gallery/bin/2017_fitzpatricparkinwhite.png
        docs/gallery/bin/2017_fitzpatricparkinwhite2.png
        docs/gallery/bin/2017_fitzpatricparkinwhite3.png
        docs/gallery/bin/2017_griffithduffin.png
        docs/gallery/bin/2017_halbav.png
        docs/gallery/bin/2017_shiliu.png
        docs/gallery/bin/2017_smithloscombe.png
        docs/gallery/bin/2017_smithloscombe2.png
        docs/gallery/bin/2017_willismumfordturner.png
        docs/gallery/bin/2017_willismumfordturner2.png
        docs/gallery/bin/2017_willismumfordturner3.png
        docs/gallery/bin/2018_Chirculescu.gif
        docs/gallery/bin/2018_coxpettifercole.png
        docs/gallery/bin/2018_jeffriesharriscribbs.png
        docs/gallery/bin/2018_jeffriesharriscripps.png
        docs/gallery/bin/2018_jeffriesharriscripps2.gif
        docs/gallery/bin/2018_pearcetait.jpg
        docs/gallery/bin/2018_popatodd.png
        docs/gallery/bin/2018_qasim.png
        docs/gallery/2017_fitzpatricparkinwhite.png
        docs/gallery/2017_halbav.png
        docs/gallery/2017_shiliu.png
        docs/gallery/2018_jeffriesharriscripps.png
        docs/gallery/index.bbl
        docs/gallery/index.html
        docs/gallery/index.pdf
        docs/gallery/index.tex
        docs/feed.xml
        docs/index.html
        docs/sitemap.xml
        Labs/glm/glm/detail/_features.hpp
        Labs/glm/glm/detail/_fixes.hpp
        Labs/glm/glm/detail/_noise.hpp
        Labs/glm/glm/detail/_swizzle.hpp
        Labs/glm/glm/detail/_swizzle_func.hpp
        Labs/glm/glm/detail/_vectorize.hpp
        Labs/glm/glm/detail/dummy.cpp
        Labs/glm/glm/detail/func_common.hpp
        Labs/glm/glm/detail/func_common.inl
        Labs/glm/glm/detail/func_exponential.hpp
        Labs/glm/glm/detail/func_exponential.inl
        Labs/glm/glm/detail/func_geometric.hpp
        Labs/glm/glm/detail/func_geometric.inl
        Labs/glm/glm/detail/func_integer.hpp
        Labs/glm/glm/detail/func_integer.inl
        Labs/glm/glm/detail/func_matrix.hpp
        Labs/glm/glm/detail/func_matrix.inl
        Labs/glm/glm/detail/func_packing.hpp
        Labs/glm/glm/detail/func_packing.inl
        Labs/glm/glm/detail/func_trigonometric.hpp
        Labs/glm/glm/detail/func_trigonometric.inl
        Labs/glm/glm/detail/func_vector_relational.hpp
        Labs/glm/glm/detail/func_vector_relational.inl
        Labs/glm/glm/detail/glm.cpp
        Labs/glm/glm/detail/intrinsic_common.hpp
        Labs/glm/glm/detail/intrinsic_common.inl
        Labs/glm/glm/detail/intrinsic_exponential.hpp
        Labs/glm/glm/detail/intrinsic_exponential.inl
        Labs/glm/glm/detail/intrinsic_geometric.hpp
        Labs/glm/glm/detail/intrinsic_geometric.inl
        Labs/glm/glm/detail/intrinsic_integer.hpp
        Labs/glm/glm/detail/intrinsic_integer.inl
        Labs/glm/glm/detail/intrinsic_matrix.hpp
        Labs/glm/glm/detail/intrinsic_matrix.inl
        Labs/glm/glm/detail/intrinsic_trigonometric.hpp
        Labs/glm/glm/detail/intrinsic_trigonometric.inl
        Labs/glm/glm/detail/intrinsic_vector_relational.hpp
        Labs/glm/glm/detail/intrinsic_vector_relational.inl
        Labs/glm/glm/detail/precision.hpp
        Labs/glm/glm/detail/setup.hpp
        Labs/glm/glm/detail/type_float.hpp
        Labs/glm/glm/detail/type_gentype.hpp
        Labs/glm/glm/detail/type_gentype.inl
        Labs/glm/glm/detail/type_half.hpp
        Labs/glm/glm/detail/type_half.inl
        Labs/glm/glm/detail/type_int.hpp
        Labs/glm/glm/detail/type_mat.hpp
        Labs/glm/glm/detail/type_mat.inl
        Labs/glm/glm/detail/type_mat2x2.hpp
        Labs/glm/glm/detail/type_mat2x2.inl
        Labs/glm/glm/detail/type_mat2x3.hpp
        Labs/glm/glm/detail/type_mat2x3.inl
        Labs/glm/glm/detail/type_mat2x4.hpp
        Labs/glm/glm/detail/type_mat2x4.inl
        Labs/glm/glm/detail/type_mat3x2.hpp
        Labs/glm/glm/detail/type_mat3x2.inl
        Labs/glm/glm/detail/type_mat3x3.hpp
        Labs/glm/glm/detail/type_mat3x3.inl
        Labs/glm/glm/detail/type_mat3x4.hpp
        Labs/glm/glm/detail/type_mat3x4.inl
        Labs/glm/glm/detail/type_mat4x2.hpp
        Labs/glm/glm/detail/type_mat4x2.inl
        Labs/glm/glm/detail/type_mat4x3.hpp
        Labs/glm/glm/detail/type_mat4x3.inl
        Labs/glm/glm/detail/type_mat4x4.hpp
        Labs/glm/glm/detail/type_mat4x4.inl
        Labs/glm/glm/detail/type_vec.hpp
        Labs/glm/glm/detail/type_vec.inl
        Labs/glm/glm/detail/type_vec1.hpp
        Labs/glm/glm/detail/type_vec1.inl
        Labs/glm/glm/detail/type_vec2.hpp
        Labs/glm/glm/detail/type_vec2.inl
        Labs/glm/glm/detail/type_vec3.hpp
        Labs/glm/glm/detail/type_vec3.inl
        Labs/glm/glm/detail/type_vec4.hpp
        Labs/glm/glm/detail/type_vec4.inl
        Labs/glm/glm/detail/type_vec4_avx.inl
        Labs/glm/glm/detail/type_vec4_avx2.inl
        Labs/glm/glm/detail/type_vec4_sse2.inl
        Labs/glm/glm/gtc/bitfield.hpp
        Labs/glm/glm/gtc/bitfield.inl
        Labs/glm/glm/gtc/color_space.hpp
        Labs/glm/glm/gtc/color_space.inl
        Labs/glm/glm/gtc/constants.hpp
        Labs/glm/glm/gtc/constants.inl
        Labs/glm/glm/gtc/epsilon.hpp
        Labs/glm/glm/gtc/epsilon.inl
        Labs/glm/glm/gtc/integer.hpp
        Labs/glm/glm/gtc/integer.inl
        Labs/glm/glm/gtc/matrix_access.hpp
        Labs/glm/glm/gtc/matrix_access.inl
        Labs/glm/glm/gtc/matrix_integer.hpp
        Labs/glm/glm/gtc/matrix_inverse.hpp
        Labs/glm/glm/gtc/matrix_inverse.inl
        Labs/glm/glm/gtc/matrix_transform.hpp
        Labs/glm/glm/gtc/matrix_transform.inl
        Labs/glm/glm/gtc/noise.hpp
        Labs/glm/glm/gtc/noise.inl
        Labs/glm/glm/gtc/packing.hpp
        Labs/glm/glm/gtc/packing.inl
        Labs/glm/glm/gtc/quaternion.hpp
        Labs/glm/glm/gtc/quaternion.inl
        Labs/glm/glm/gtc/random.hpp
        Labs/glm/glm/gtc/random.inl
        Labs/glm/glm/gtc/reciprocal.hpp
        Labs/glm/glm/gtc/reciprocal.inl
        Labs/glm/glm/gtc/round.hpp
        Labs/glm/glm/gtc/round.inl
        Labs/glm/glm/gtc/type_precision.hpp
        Labs/glm/glm/gtc/type_precision.inl
        Labs/glm/glm/gtc/type_ptr.hpp
        Labs/glm/glm/gtc/type_ptr.inl
        Labs/glm/glm/gtc/ulp.hpp
        Labs/glm/glm/gtc/ulp.inl
        Labs/glm/glm/gtc/vec1.hpp
        Labs/glm/glm/gtc/vec1.inl
        Labs/glm/glm/gtx/associated_min_max.hpp
        Labs/glm/glm/gtx/associated_min_max.inl
        Labs/glm/glm/gtx/bit.hpp
        Labs/glm/glm/gtx/bit.inl
        Labs/glm/glm/gtx/closest_point.hpp
        Labs/glm/glm/gtx/closest_point.inl
        Labs/glm/glm/gtx/color_space.hpp
        Labs/glm/glm/gtx/color_space.inl
        Labs/glm/glm/gtx/color_space_YCoCg.hpp
        Labs/glm/glm/gtx/color_space_YCoCg.inl
        Labs/glm/glm/gtx/common.hpp
        Labs/glm/glm/gtx/common.inl
        Labs/glm/glm/gtx/compatibility.hpp
        Labs/glm/glm/gtx/compatibility.inl
        Labs/glm/glm/gtx/component_wise.hpp
        Labs/glm/glm/gtx/component_wise.inl
        Labs/glm/glm/gtx/dual_quaternion.hpp
        Labs/glm/glm/gtx/dual_quaternion.inl
        Labs/glm/glm/gtx/euler_angles.hpp
        Labs/glm/glm/gtx/euler_angles.inl
        Labs/glm/glm/gtx/extend.hpp
        Labs/glm/glm/gtx/extend.inl
        Labs/glm/glm/gtx/extented_min_max.hpp
        Labs/glm/glm/gtx/extented_min_max.inl
        Labs/glm/glm/gtx/fast_exponential.hpp
        Labs/glm/glm/gtx/fast_exponential.inl
        Labs/glm/glm/gtx/fast_square_root.hpp
        Labs/glm/glm/gtx/fast_square_root.inl
        Labs/glm/glm/gtx/fast_trigonometry.hpp
        Labs/glm/glm/gtx/fast_trigonometry.inl
        Labs/glm/glm/gtx/gradient_paint.hpp
        Labs/glm/glm/gtx/gradient_paint.inl
        Labs/glm/glm/gtx/handed_coordinate_space.hpp
        Labs/glm/glm/gtx/handed_coordinate_space.inl
        Labs/glm/glm/gtx/hash.hpp
        Labs/glm/glm/gtx/hash.inl
        Labs/glm/glm/gtx/integer.hpp
        Labs/glm/glm/gtx/integer.inl
        Labs/glm/glm/gtx/intersect.hpp
        Labs/glm/glm/gtx/intersect.inl
        Labs/glm/glm/gtx/io.hpp
        Labs/glm/glm/gtx/io.inl
        Labs/glm/glm/gtx/log_base.hpp
        Labs/glm/glm/gtx/log_base.inl
        Labs/glm/glm/gtx/matrix_cross_product.hpp
        Labs/glm/glm/gtx/matrix_cross_product.inl
        Labs/glm/glm/gtx/matrix_decompose.hpp
        Labs/glm/glm/gtx/matrix_decompose.inl
        Labs/glm/glm/gtx/matrix_interpolation.hpp
        Labs/glm/glm/gtx/matrix_interpolation.inl
        Labs/glm/glm/gtx/matrix_major_storage.hpp
        Labs/glm/glm/gtx/matrix_major_storage.inl
        Labs/glm/glm/gtx/matrix_operation.hpp
        Labs/glm/glm/gtx/matrix_operation.inl
        Labs/glm/glm/gtx/matrix_query.hpp
        Labs/glm/glm/gtx/matrix_query.inl
        Labs/glm/glm/gtx/matrix_transform_2d.hpp
        Labs/glm/glm/gtx/matrix_transform_2d.inl
        Labs/glm/glm/gtx/mixed_product.hpp
        Labs/glm/glm/gtx/mixed_product.inl
        Labs/glm/glm/gtx/norm.hpp
        Labs/glm/glm/gtx/norm.inl
        Labs/glm/glm/gtx/normal.hpp
        Labs/glm/glm/gtx/normal.inl
        Labs/glm/glm/gtx/normalize_dot.hpp
        Labs/glm/glm/gtx/normalize_dot.inl
        Labs/glm/glm/gtx/number_precision.hpp
        Labs/glm/glm/gtx/number_precision.inl
        Labs/glm/glm/gtx/optimum_pow.hpp
        Labs/glm/glm/gtx/optimum_pow.inl
        Labs/glm/glm/gtx/orthonormalize.hpp
        Labs/glm/glm/gtx/orthonormalize.inl
        Labs/glm/glm/gtx/perpendicular.hpp
        Labs/glm/glm/gtx/perpendicular.inl
        Labs/glm/glm/gtx/polar_coordinates.hpp
        Labs/glm/glm/gtx/polar_coordinates.inl
        Labs/glm/glm/gtx/projection.hpp
        Labs/glm/glm/gtx/projection.inl
        Labs/glm/glm/gtx/quaternion.hpp
        Labs/glm/glm/gtx/quaternion.inl
        Labs/glm/glm/gtx/range.hpp
        Labs/glm/glm/gtx/raw_data.hpp
        Labs/glm/glm/gtx/raw_data.inl
        Labs/glm/glm/gtx/rotate_normalized_axis.hpp
        Labs/glm/glm/gtx/rotate_normalized_axis.inl
        Labs/glm/glm/gtx/rotate_vector.hpp
        Labs/glm/glm/gtx/rotate_vector.inl
        Labs/glm/glm/gtx/scalar_multiplication.hpp
        Labs/glm/glm/gtx/scalar_relational.hpp
        Labs/glm/glm/gtx/scalar_relational.inl
        Labs/glm/glm/gtx/simd_mat4.hpp
        Labs/glm/glm/gtx/simd_mat4.inl
        Labs/glm/glm/gtx/simd_quat.hpp
        Labs/glm/glm/gtx/simd_quat.inl
        Labs/glm/glm/gtx/simd_vec4.hpp
        Labs/glm/glm/gtx/simd_vec4.inl
        Labs/glm/glm/gtx/spline.hpp
        Labs/glm/glm/gtx/spline.inl
        Labs/glm/glm/gtx/std_based_type.hpp
        Labs/glm/glm/gtx/std_based_type.inl
        Labs/glm/glm/gtx/string_cast.hpp
        Labs/glm/glm/gtx/string_cast.inl
        Labs/glm/glm/gtx/transform.hpp
        Labs/glm/glm/gtx/transform.inl
        Labs/glm/glm/gtx/transform2.hpp
        Labs/glm/glm/gtx/transform2.inl
        Labs/glm/glm/gtx/type_aligned.hpp
        Labs/glm/glm/gtx/type_aligned.inl
        Labs/glm/glm/gtx/vector_angle.hpp
        Labs/glm/glm/gtx/vector_angle.inl
        Labs/glm/glm/gtx/vector_query.hpp
        Labs/glm/glm/gtx/vector_query.inl
        Labs/glm/glm/gtx/wrap.hpp
        Labs/glm/glm/gtx/wrap.inl
        Labs/glm/glm/common.hpp
        Labs/glm/glm/exponential.hpp
        Labs/glm/glm/ext.hpp
        Labs/glm/glm/fwd.hpp
        Labs/glm/glm/geometric.hpp
        Labs/glm/glm/glm.hpp
        Labs/glm/glm/integer.hpp
        Labs/glm/glm/mat2x2.hpp
        Labs/glm/glm/mat2x3.hpp
        Labs/glm/glm/mat2x4.hpp
        Labs/glm/glm/mat3x2.hpp
        Labs/glm/glm/mat3x3.hpp
        Labs/glm/glm/mat3x4.hpp
        Labs/glm/glm/mat4x2.hpp
        Labs/glm/glm/mat4x3.hpp
        Labs/glm/glm/mat4x4.hpp
        Labs/glm/glm/matrix.hpp
        Labs/glm/glm/packing.hpp
        Labs/glm/glm/trigonometric.hpp
        Labs/glm/glm/vec2.hpp
        Labs/glm/glm/vec3.hpp
        Labs/glm/glm/vec4.hpp
        Labs/glm/glm/vector_relational.hpp
        Labs/glm/test/core/core_func_common.cpp
        Labs/glm/test/core/core_func_exponential.cpp
        Labs/glm/test/core/core_func_geometric.cpp
        Labs/glm/test/core/core_func_integer.cpp
        Labs/glm/test/core/core_func_integer_bit_count.cpp
        Labs/glm/test/core/core_func_integer_find_lsb.cpp
        Labs/glm/test/core/core_func_integer_find_msb.cpp
        Labs/glm/test/core/core_func_matrix.cpp
        Labs/glm/test/core/core_func_noise.cpp
        Labs/glm/test/core/core_func_packing.cpp
        Labs/glm/test/core/core_func_swizzle.cpp
        Labs/glm/test/core/core_func_trigonometric.cpp
        Labs/glm/test/core/core_func_vector_relational.cpp
        Labs/glm/test/core/core_setup_force_cxx98.cpp
        Labs/glm/test/core/core_setup_message.cpp
        Labs/glm/test/core/core_setup_precision.cpp
        Labs/glm/test/core/core_type_cast.cpp
        Labs/glm/test/core/core_type_ctor.cpp
        Labs/glm/test/core/core_type_float.cpp
        Labs/glm/test/core/core_type_int.cpp
        Labs/glm/test/core/core_type_length.cpp
        Labs/glm/test/core/core_type_length_size.cpp
        Labs/glm/test/core/core_type_mat2x2.cpp
        Labs/glm/test/core/core_type_mat2x3.cpp
        Labs/glm/test/core/core_type_mat2x4.cpp
        Labs/glm/test/core/core_type_mat3x2.cpp
        Labs/glm/test/core/core_type_mat3x3.cpp
        Labs/glm/test/core/core_type_mat3x4.cpp
        Labs/glm/test/core/core_type_mat4x2.cpp
        Labs/glm/test/core/core_type_mat4x3.cpp
        Labs/glm/test/core/core_type_mat4x4.cpp
        Labs/glm/test/core/core_type_vec1.cpp
        Labs/glm/test/core/core_type_vec2.cpp
        Labs/glm/test/core/core_type_vec3.cpp
        Labs/glm/test/core/core_type_vec4.cpp
        Labs/glm/test/external/gli/core/dummy.cpp
        Labs/glm/test/external/gli/core/generate_mipmaps.hpp
        Labs/glm/test/external/gli/core/generate_mipmaps.inl
        Labs/glm/test/external/gli/core/image2d.hpp
        Labs/glm/test/external/gli/core/image2d.inl
        Labs/glm/test/external/gli/core/operation.hpp
        Labs/glm/test/external/gli/core/operation.inl
        Labs/glm/test/external/gli/core/operator.hpp
        Labs/glm/test/external/gli/core/operator.inl
        Labs/glm/test/external/gli/core/shared_array.hpp
        Labs/glm/test/external/gli/core/shared_array.inl
        Labs/glm/test/external/gli/core/shared_ptr.hpp
        Labs/glm/test/external/gli/core/shared_ptr.inl
        Labs/glm/test/external/gli/core/size.hpp
        Labs/glm/test/external/gli/core/size.inl
        Labs/glm/test/external/gli/core/texture2d.hpp
        Labs/glm/test/external/gli/core/texture2d.inl
        Labs/glm/test/external/gli/core/texture2d_array.hpp
        Labs/glm/test/external/gli/core/texture2d_array.inl
        Labs/glm/test/external/gli/core/texture_cube.hpp
        Labs/glm/test/external/gli/core/texture_cube.inl
        Labs/glm/test/external/gli/core/texture_cube_array.hpp
        Labs/glm/test/external/gli/core/texture_cube_array.inl
        Labs/glm/test/external/gli/gtx/compression.hpp
        Labs/glm/test/external/gli/gtx/compression.inl
        Labs/glm/test/external/gli/gtx/fetch.hpp
        Labs/glm/test/external/gli/gtx/fetch.inl
        Labs/glm/test/external/gli/gtx/gl_texture2d.hpp
        Labs/glm/test/external/gli/gtx/gl_texture2d.inl
        Labs/glm/test/external/gli/gtx/gradient.hpp
        Labs/glm/test/external/gli/gtx/gradient.inl
        Labs/glm/test/external/gli/gtx/loader.hpp
        Labs/glm/test/external/gli/gtx/loader.inl
        Labs/glm/test/external/gli/gtx/loader_dds10.hpp
        Labs/glm/test/external/gli/gtx/loader_dds10.inl
        Labs/glm/test/external/gli/gtx/loader_dds9.hpp
        Labs/glm/test/external/gli/gtx/loader_dds9.inl
        Labs/glm/test/external/gli/gtx/loader_tga.hpp
        Labs/glm/test/external/gli/gtx/loader_tga.inl
        Labs/glm/test/external/gli/gtx/wavelet.hpp
        Labs/glm/test/external/gli/gtx/wavelet.inl
        Labs/glm/test/external/gli/gli.hpp
        Labs/glm/test/gtc/gtc_bitfield.cpp
        Labs/glm/test/gtc/gtc_color_space.cpp
        Labs/glm/test/gtc/gtc_constants.cpp
        Labs/glm/test/gtc/gtc_epsilon.cpp
        Labs/glm/test/gtc/gtc_integer.cpp
        Labs/glm/test/gtc/gtc_matrix_access.cpp
        Labs/glm/test/gtc/gtc_matrix_integer.cpp
        Labs/glm/test/gtc/gtc_matrix_inverse.cpp
        Labs/glm/test/gtc/gtc_matrix_transform.cpp
        Labs/glm/test/gtc/gtc_noise.cpp
        Labs/glm/test/gtc/gtc_packing.cpp
        Labs/glm/test/gtc/gtc_quaternion.cpp
        Labs/glm/test/gtc/gtc_random.cpp
        Labs/glm/test/gtc/gtc_reciprocal.cpp
        Labs/glm/test/gtc/gtc_round.cpp
        Labs/glm/test/gtc/gtc_type_precision.cpp
        Labs/glm/test/gtc/gtc_type_ptr.cpp
        Labs/glm/test/gtc/gtc_ulp.cpp
        Labs/glm/test/gtc/gtc_user_defined_types.cpp
        Labs/glm/test/gtc/gtc_vec1.cpp
        Labs/glm/test/gtx/gtx_associated_min_max.cpp
        Labs/glm/test/gtx/gtx_closest_point.cpp
        Labs/glm/test/gtx/gtx_color_space.cpp
        Labs/glm/test/gtx/gtx_color_space_YCoCg.cpp
        Labs/glm/test/gtx/gtx_common.cpp
        Labs/glm/test/gtx/gtx_compatibility.cpp
        Labs/glm/test/gtx/gtx_component_wise.cpp
        Labs/glm/test/gtx/gtx_dual_quaternion.cpp
        Labs/glm/test/gtx/gtx_euler_angle.cpp
        Labs/glm/test/gtx/gtx_extend.cpp
        Labs/glm/test/gtx/gtx_extented_min_max.cpp
        Labs/glm/test/gtx/gtx_fast_exponential.cpp
        Labs/glm/test/gtx/gtx_fast_square_root.cpp
        Labs/glm/test/gtx/gtx_fast_trigonometry.cpp
        Labs/glm/test/gtx/gtx_gradient_paint.cpp
        Labs/glm/test/gtx/gtx_handed_coordinate_space.cpp
        Labs/glm/test/gtx/gtx_int_10_10_10_2.cpp
        Labs/glm/test/gtx/gtx_integer.cpp
        Labs/glm/test/gtx/gtx_intersect.cpp
        Labs/glm/test/gtx/gtx_io.cpp
        Labs/glm/test/gtx/gtx_log_base.cpp
        Labs/glm/test/gtx/gtx_matrix_cross_product.cpp
        Labs/glm/test/gtx/gtx_matrix_decompose.cpp
        Labs/glm/test/gtx/gtx_matrix_interpolation.cpp
        Labs/glm/test/gtx/gtx_matrix_major_storage.cpp
        Labs/glm/test/gtx/gtx_matrix_operation.cpp
        Labs/glm/test/gtx/gtx_matrix_query.cpp
        Labs/glm/test/gtx/gtx_matrix_transform_2d.cpp
        Labs/glm/test/gtx/gtx_mixed_product.cpp
        Labs/glm/test/gtx/gtx_norm.cpp
        Labs/glm/test/gtx/gtx_normal.cpp
        Labs/glm/test/gtx/gtx_normalize_dot.cpp
        Labs/glm/test/gtx/gtx_number_precision.cpp
        Labs/glm/test/gtx/gtx_optimum_pow.cpp
        Labs/glm/test/gtx/gtx_orthonormalize.cpp
        Labs/glm/test/gtx/gtx_perpendicular.cpp
        Labs/glm/test/gtx/gtx_polar_coordinates.cpp
        Labs/glm/test/gtx/gtx_projection.cpp
        Labs/glm/test/gtx/gtx_quaternion.cpp
        Labs/glm/test/gtx/gtx_random.cpp
        Labs/glm/test/gtx/gtx_range.cpp
        Labs/glm/test/gtx/gtx_rotate_normalized_axis.cpp
        Labs/glm/test/gtx/gtx_rotate_vector.cpp
        Labs/glm/test/gtx/gtx_scalar_multiplication.cpp
        Labs/glm/test/gtx/gtx_scalar_relational.cpp
        Labs/glm/test/gtx/gtx_simd_mat4.cpp
        Labs/glm/test/gtx/gtx_simd_vec4.cpp
        Labs/glm/test/gtx/gtx_spline.cpp
        Labs/glm/test/gtx/gtx_string_cast.cpp
        Labs/glm/test/gtx/gtx_type_aligned.cpp
        Labs/glm/test/gtx/gtx_vector_angle.cpp
        Labs/glm/test/gtx/gtx_vector_query.cpp
        Labs/glm/test/gtx/gtx_wrap.cpp
        Labs/raytracer/Source/SDLauxiliary.h
        Labs/raytracer/Source/skeleton.cpp
        Labs/raytracer/Source/TestModelH.h
        Labs/starfield/Source/SDLauxiliary.h
        Labs/starfield/Source/skeleton.cpp
        Labs/starfield/Source/TestModel.h
        Labs/screenshot.bmp
        Lectures/01.pdf
        Lectures/02.pdf
        README.md)
